syntax = "proto3";

package userservice;
option go_package = "github.com/outk/rewardingsites/userservice";

service UserService {
    rpc AddUser (AddUserRequest) returns (AddUserReply) {}
}

message User {
    uint32 id = 1;
    string first_name = 2;
    string middle_name = 3;
    string last_name = 4;
    uint32 gender = 5;
    Birthday birthday = 6;

    string email = 7;
    string password = 8;
}

message Birthday {
    uint32 year = 1;
    uint32 month = 2;
    uint32 day = 3;
}
  
message AddUserRequest {
    User user = 1;
}

message AddUserReply {
    uint32 user_id = 1;
}